--- a/calculator.css
+++ b/calculator.css
@@ -12,7 +12,7 @@
   border-radius: 10%;
   border-style: outset;
   background-color: #fdf6df;
-  width: 35vw;
+  width: 40vw;
 } 
 .calculator_title { 
   display: inline-block;
@@ -29,7 +29,7 @@
   text-transform: uppercase;
   color: rgb(109, 105, 105);
   font-family: "Lucida Sans Unicode", "Lucida Grande", sans-serif;
-  font-size: 5em;
+  font-size: 2.5vw;
 }
 .calculator_output { 
   border-style: inset;
